fixed z-index for components

--- a/src/stylus/components/_bottom-nav.styl
+++ b/src/stylus/components/_bottom-nav.styl
@@ -9,7 +9,7 @@
   transform: translate3d(0, 60px, 0)
   transition: all .4s cubic-bezier(.25, .8, .50, 1)
   width: 100%
-  z-index: 6
+  z-index: 4
 
   &--absolute
     position: absolute
